# VibeWire

./: .gitignore  eslint.config.mjs  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  messages.rs  state.rs
docs/: hosting.md
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/convex/: channels.ts  messages.ts  schema.ts  servers.ts  tasks.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/vibe/: layout.tsx  page.tsx
frontend/src/app/vibe/[serverId]/: layout.tsx  page.tsx
frontend/src/app/vibe/[serverId]/channel/: page.tsx
frontend/src/app/vibe/[serverId]/channel/[channelId]/: layout.tsx  page.tsx
frontend/src/components/: Authenticated.tsx  ChannelHistoryContext.tsx  ChannelList.tsx  ChannelListEntry.tsx  ChannelListWrapper.tsx  CreateChannel.tsx  CreateServer.tsx  MemberList.tsx  MemberListWrapper.tsx  MessageList.tsx  MessageListEntry.tsx  MessageListWrapper.tsx  MessageSender.tsx  RememberChannel.tsx  RememberServer.tsx  ServerList.tsx  ServerListEntry.tsx  ServerListWrapper.tsx  SocketContext.tsx  Thing.tsx  UserButton.tsx
frontend/src/components/ui/: textarea-autosize.tsx
src/app/: layout.tsx  page.tsx
src/app/auth/login/: page.tsx
src/app/auth/signup/: page.tsx
src/app/vibe/: layout.tsx  page.tsx
src/components/: login-form.tsx  signup-form.tsx
src/lib/: utils.ts
src/lib/supabase/: middleware.ts
supabase/: seed.sql
supabase/migrations/: 20250530030851_create_test.sql
