[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
clerk-rs = { version = "0.4.1", features = ["axum"] }
convex = "0.9.0"
dotenvy = { version = "0.15.7" }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = { version = "0.4.1" }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
